--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,53 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-31:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/cmd.py\", line 114, in pump_stream\n",
-      "    handler(line)\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/diff.py\", line 570, in <lambda>\n",
-      "    handle_process_output(proc, lambda byt: cls._handle_diff_line(byt, repo, index),\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/diff.py\", line 517, in _handle_diff_line\n",
-      "    old_mode, new_mode, a_blob_id, b_blob_id, _change_type = meta.split(None, 4)\n",
-      "ValueError: not enough values to unpack (expected 5, got 3)\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/cmd.py\", line 120, in pump_stream\n",
-      "    raise CommandError([f'<{name}-pump>'] + remove_password_if_present(cmdline), ex) from ex\n",
-      "git.exc.CommandError: Cmd('<stdout-pump>') failed due to: ValueError('not enough values to unpack (expected 5, got 3)')\n",
-      "  cmdline: <stdout-pump> git diff --abbrev=40 --full-index -M --raw -z --no-color -- docs\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<git.diff.Diff at 0x10bbe9430>,\n",
-       " <git.diff.Diff at 0x10bbe94c0>,\n",
-       " <git.diff.Diff at 0x10bbe9790>,\n",
-       " <git.diff.Diff at 0x10bbe9820>,\n",
-       " <git.diff.Diff at 0x10bbe98b0>,\n",
-       " <git.diff.Diff at 0x10bbe9940>,\n",
-       " <git.diff.Diff at 0x10bbe99d0>,\n",
-       " <git.diff.Diff at 0x10bbe9a60>,\n",
-       " <git.diff.Diff at 0x10bbe9af0>,\n",
-       " <git.diff.Diff at 0x10bbe9b80>,\n",
-       " <git.diff.Diff at 0x10bbe9c10>]"
+       "[<git.diff.Diff at 0x111d3c8b0>,\n",
+       " <git.diff.Diff at 0x112fd5ca0>,\n",
+       " <git.diff.Diff at 0x112fd5c10>,\n",
+       " <git.diff.Diff at 0x112fd5550>,\n",
+       " <git.diff.Diff at 0x112fd5b80>,\n",
+       " <git.diff.Diff at 0x112fd5dc0>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,60 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-27:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/cmd.py\", line 114, in pump_stream\n",
-      "    handler(line)\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/diff.py\", line 570, in <lambda>\n",
-      "    handle_process_output(proc, lambda byt: cls._handle_diff_line(byt, repo, index),\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/diff.py\", line 517, in _handle_diff_line\n",
-      "    old_mode, new_mode, a_blob_id, b_blob_id, _change_type = meta.split(None, 4)\n",
-      "ValueError: not enough values to unpack (expected 5, got 3)\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/threading.py\", line 870, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/lyssa/Library/Python/3.8/lib/python/site-packages/git/cmd.py\", line 120, in pump_stream\n",
-      "    raise CommandError([f'<{name}-pump>'] + remove_password_if_present(cmdline), ex) from ex\n",
-      "git.exc.CommandError: Cmd('<stdout-pump>') failed due to: ValueError('not enough values to unpack (expected 5, got 3)')\n",
-      "  cmdline: <stdout-pump> git diff --abbrev=40 --full-index -M --raw -z --no-color\n"
-     ]
-    }
-   ],
-   "source": [
-    "changed_files = [ item.a_path for item in repo.index.diff(None) ]\n",
-    "# changed_files = [ file.split(\"/\")[1] for file in changed_files if \"docs/\" in file]\n",
-    "untracked_files = [file.split(\"/\")[1] for file in repo.untracked_files if \"docs/\" in file]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "changed_files: ['Adolfo Scherer (1874-).html', 'Alcirio Silvério Scherer.html', 'Anna Elisabetha Pündrich (1872-1949).html', 'Araci Scherer (Eckhard).html', 'Arthur Astor Scherer.html', 'Carlos Pündrich (1839-1918).html', 'Catharina Grub.html', 'Catharina Luiza Herrmann (1864-1935).html', 'Catharina Theresa Scherer (1878-1951).html', 'Catharina Weide (1833-1915).html', 'Certidão de Casamento']\n",
-      "untracked_files: ['Antenor Scherer.html', 'Lajeado, Rio Grande do Sul, Brasil.html', 'Norberto Edgar Scherer (1914-1986).html', 'Norminda Scherer (1911-1985).html', 'Olinda Scherer.html', 'Registro de Obito Frederico Jacob Theobaldo Scherer.html', 'embed.html']\n"
+      "changed_files: ['Araci Scherer (Eckhard).html', 'Arthur Astor Scherer.html', 'Frederico Jacob Theobaldo Scherer (1885-1948).html', 'Izolete Deli Langaro (Scherer).html', 'Norberto Edgar Scherer (1914-1986).html', 'index.html']\n",
+      "untracked_files: ['Yuri Gabriel Langaro.html']\n"
      ]
     }
    ],
    "source": [
-    "print(f\"changed_files: {changed_files}\")\n",
-    "print(f\"untracked_files: {untracked_files}\")"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -142,8 +72,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g"
+    "from git import Repo\n",
+    "\n",
+    "def get_git_changes():\n",
+    "    path = \"/Users/lyssa/minha-genealogia\"\n",
+    "    repo = Repo(path)\n",
+    "    changed_files = [ item.a_path.split(\"/\")[1] for item in repo.index.diff(None) if \"docs/\" in item.a_path]\n",
+    "    untracked_files = [file.split(\"/\")[1] for file in repo.untracked_files if \"docs/\" in file]\n",
+    "\n",
+    "changed_files, untracked_files = get_git_changes()\n",
+    "print(f\"changed_files: {changed_files}\")\n",
+    "print(f\"untracked_files: {untracked_files}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<p>Páginas modificadas: <a href=\"Izolete%20Deli%20Langaro%20(Scherer).html\">Izolete Deli Langaro (Scherer)</a>, <a href=\"Norberto%20Edgar%20Scherer%20(1914-1986).html\">Norberto Edgar Scherer (1914-1986)</a>, <a href=\"Araci%20Scherer%20(Eckhard).html\">Araci Scherer (Eckhard)</a>, <a href=\"Arthur%20Astor%20Scherer.html\">Arthur Astor Scherer</a>, <a href=\"Frederico%20Jacob%20Theobaldo%20Scherer%20(1885-1948).html\">Frederico Jacob Theobaldo Scherer (1885-1948)</a> </p><p>Páginas adicionadas: <a href=\"Yuri%20Gabriel%20Langaro.html\">Yuri Gabriel Langaro</a> </p>'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def modified_pages(files):\n",
+    "    ignore_files = set([\"TODO\", \"index\", \".DS_Store\"])\n",
+    "    files = {name.replace(\".html\", \"\") for name in files}\n",
+    "    files = [f'<a href=\"{name.replace(\" \",\"%20\").replace(\"?\",\"%3F\")}.html\">{name}</a>' for name in files if name not in ignore_files]\n",
+    "    return \", \".join(files)\n",
+    "\n",
+    "html = f\"<p>Páginas modificadas: {modified_pages(changed_files)} </p>\"\n",
+    "html += f\"<p>Páginas adicionadas: {modified_pages(untracked_files)} </p>\"\n",
+    "\n",
+    "html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
